packages/meta/src/test/__tests__/language-tests/faultyDefFiles/syntax-errors/test6.lang
language XXXX
model test {
}

modelunit testUnit {
}


concept RRRR {
    simple: number
    part: RRRR
}
